apps/base/organisers/overseerr/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`overseerr.${CLUSTER_DOMAIN}`)
      services:
        - name: overseerr
          port: 5055
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
    # - kind: Rule
    #   match: Host(`overseerr.${CLUSTER_DOMAIN}`)  && PathPrefix(`/api`)
    #   services:
    #     - name: prowlarr
    #       port: 5055
    #   middlewares:
    #     - name: traefik-secure-headers
    #       namespace: kube-system
  tls:
    certResolver: cloudflare
